# msfootprint

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-publish.yml
BF_output/: building_footprint.geojson  building_footprint.gpkg
sample_boundary/: 08040201_catchment.dbf  08040201_catchment.shp  08040201_catchment.shx  test.gpkg
src/msfootprint/: __init__.py  buildingfootprint.py  find_footprinttable.py  globalgooglemicrosoftBF.py  utils.py
tests/: test.py  test_function.py
