[tool.poetry]
name = "msfootprint"
version = "0.1.27"
description = "A tool to extract the microsoft building footprints with user defined boundary."
authors = ["supathdhitalGEO <sdhital@crimson.ua.edu>"]
readme = "README.md"
packages = [{include = "msfootprint", from = "src"}]
repository = "https://github.com/supathdhitalGEO/msfootprint"

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "*"  
geopandas = "^1.0.1"
fiona = "^1.10.1"
pytest = "^8.3.4"
pyspark = "^3.5.4"
geemap = "^0.35.3"

[tool.setuptools_scm]
write_to = "src/your_package/_version.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
